--- a/index.html
+++ b/index.html
@@ -1,13 +1,11 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
-    <title>Nicolas lindo</title>
-</head>
-<body>
-    <H1>história do mcqueen</H1
-    <p>Relâmpago Mcqueen é um carro de corrida muito veloz. O número 95 e sua cor vermelha são inconfundíveis, além de sua famosa frase KATCHAU! Nessa aventura, ele está prestes a disputar uma importante corrida e conta com a ajuda especial dos pequenos leitores e de velhos amigos, como Mate e Doc Hudson.</p>
-</body>
-</html>
+
+
+    <H1>história do relampago mcqueen</H1
+
+   </html> relâmpago Mcqueen é um carro de corrida muito veloz. O número 95 e sua cor vermelha são 
+inconfundíveis, além de sua famosa frase KATCHAU! Nessa aventura, ele está prestes a 
+disputar uma importante corrida e conta com a ajuda especial dos pequenos leitores e de
+velhos amigos, como Mate e Doc Hudson.
+   sua definição, McQueen é um Corvette preparado para corridas de Stock e Nascar
+ companheiro de Sally Carrera e grande amigo de Mate (Tow Mater no original) e Mack, seu caminhão
+ de carga.</html>
