--- a/index.html
+++ b/index.html
@@ -1,11 +1,27 @@
 
+     <meta charset="UTF-8">
 
+
+
+
+
+
+
+
+
+
+     
     <H1>história do relampago mcqueen</H1
 
-   </html> relâmpago Mcqueen é um carro de corrida muito veloz. O número 95 e sua cor vermelha são 
-inconfundíveis, além de sua famosa frase KATCHAU! Nessa aventura, ele está prestes a 
-disputar uma importante corrida e conta com a ajuda especial dos pequenos leitores e de
-velhos amigos, como Mate e Doc Hudson.
-   sua definição, McQueen é um Corvette preparado para corridas de Stock e Nascar
- companheiro de Sally Carrera e grande amigo de Mate (Tow Mater no original) e Mack, seu caminhão
- de carga.</html>
+        </p>relâmpago Mcqueen é um carro de corrida muito veloz. O número 95 e sua cor vermelha são 
+      inconfundíveis, além de sua famosa frase KATCHAU! Nessa aventura, ele está prestes a 
+      disputar uma importante corrida e conta com a ajuda especial dos pequenos leitores e de
+      velhos amigos, como Mate e Doc Hudson.</p>
+
+    </p></em>Nossa missão é: <strong."Proporcionar auto-estima e qualidade de vida aos clientes"</strong>.</em></p>
+
+        </p> Sua definição, McQueen é um Corvette preparado para corridas de Stock e Nascar
+      companheiro de Sally Carrera e grande amigo de Mate (Tow Mater no original) e Mack, seu caminhão
+      de carga.</p>
+      </body>
+</html>
