--- a/index.html
+++ b/index.html
@@ -1,17 +1,13 @@
+  <!DOCTYPE html>  
+  <html lang="pt-br">
+     <head>
+          <meta charset="UTF-8"> 
+          <title> barbearia alura</title>
+          <link rel="styleheet" href="tyle.css"
+     </head>
 
-     <meta charset="UTF-8">
-
-
-
-
-
-
-
-
-
-
-     
-    <H1>história do relampago mcqueen</H1
+     <body>
+          <H1>história do relampago mcqueen</H1
 
         </p>relâmpago Mcqueen é um carro de corrida muito veloz. O número 95 e sua cor vermelha são 
       inconfundíveis, além de sua famosa frase KATCHAU! Nessa aventura, ele está prestes a 
