--- a/index.html
+++ b/index.html
@@ -5,8 +5,9 @@
           <title> barbearia alura</title>
           <link rel="styleheet" href="tyle.css"
      </head>
-
+       
      <body>
+      <img src="Carros-3-e1499904990995.jpg"
           <H1>história do relampago mcqueen</H1
 
         </p>relâmpago Mcqueen é um carro de corrida muito veloz. O número 95 e sua cor vermelha são 
@@ -19,5 +20,6 @@
         </p> Sua definição, McQueen é um Corvette preparado para corridas de Stock e Nascar
       companheiro de Sally Carrera e grande amigo de Mate (Tow Mater no original) e Mack, seu caminhão
       de carga.</p>
+      
       </body>
 </html> 
