--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
        
      <body>
       <img src="Carros-3-e1499904990995.jpg"
-          <H1>história do relampago mcqueen</H1
+          <H1>história do relampago mcqueen</H1>
 
         </p>relâmpago Mcqueen é um carro de corrida muito veloz. O número 95 e sua cor vermelha são 
       inconfundíveis, além de sua famosa frase KATCHAU! Nessa aventura, ele está prestes a 
